# PAWS360

./: .ci-trigger  .dockerignore  .env  .env.example  .env.local.template  .env.production  .eslintignore  .gitignore  .gitmessage  .npmignore  .prettierignore  .terraformignore  .yamllint.yml  CI-CD-README.md  CI-STATUS.md  CI_LOGS_ANALYSIS_RESOLUTION.md  CONTRIBUTOR_WORK_HISTORY.md  CREDENTIAL_SECURITY_REPORT.md  DEMO-IMPLEMENTATION-SUMMARY.md  DEPLOYMENT-SUMMARY.md  GenerateHash.java  JIRA-STORY-NUMBER-CORRECTION.md  Jenkinsfile  KEY_FILES_PROMOTION.md  LOCAL_TESTING.md  MERGE_DECISIONS.md  Makefile  Makefile.dev  NEXT-STEPS-INFRASTRUCTURE-TRACK.md  PAWS360_Admin_API.postman_collection.json  PAWS360_Local.postman_environment.json  PAWS360_UWM_Seeder.postman_collection.json  PAWS360_User_Assign_Enroll.postman_collection.json  PAWS360_User_Workflows.postman_collection.json  PERFORMANCE_TEST_ISSUE_RESOLUTION.md  QUICKSTART.md  README.md  README_PACKAGE.md  SCRUM-54-COMPLETION-SUMMARY.md  SCRUM-55-User-Story.md  (+40 more)
.github/: ARTIFACTS_REPORTING.md  CODEOWNERS  ISSUE_SSO_RETIREMENT.md  ISSUE_STABILIZE_E2E.md  PRODUCTION_DEPLOY_README.md  STAGE_DEPLOY_README.md  copilot-instructions.md
.next/: app-build-manifest.json  trace
__mocks__/: lucide-react.js
app/: global.css  layout.tsx  page.tsx
artifacts/: README.md
ci/: populate-m2.sh  superlinter-run.sh
config/: .coverage  .env  .env.example  .env.jira  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  claude_desktop_config.json  critical-params.json  dev.env  prod.env  pyproject.toml  staging.env
config/central/: .env.central
config/environments/: development.env  production.env  staging.env
config/production/: docker-compose.yml
config/services/: admin-dashboard.env  jira-mcp.env  student-frontend.env
coverage/: index.html  lcov.info
database/: PRESENTATION_GUIDE.md  README.md  demo_accounts_list.txt  demo_reset.sql  demo_seed_data.sql  demo_seed_data_complete.sql  demo_seed_data_simple.sql  demo_seed_schema_compatible.sql  enhanced_demo_seed_data.sql  (+23 more)
(+1403 files in other folders)
